# DevOps-Home-Lab-2025

./: Makefile  README.md  argocd.yaml  cloudflared.yaml  deploy-ingress-nginx.yaml  home-lab.md  interviewprep.md  kind-config.yaml  kustomization.yaml  meshcentral-k8s.yaml  values.yaml
backend/: server.js
docs/: 00-overview.md  04-ingress.md  05-observability.md  06-gitops.md  07-global.md  08-troubleshooting.md  09-faq.md  10-glossary.md  Demo workflow.json  README.md  cloudflare-deep-dive.md  cloudflare-tunnel-setup-guide.md  cloudflare-tunnel-troubleshooting.md  domain-replacement-guide.md  fail2ban-docker-ssh-protection-guide.md  gitops-troubleshooting.md  global-deployment-troubleshooting.md  header-forwarding-guide.md  monitoring-access-guide.md  monitoring-troubleshooting.md  n8n-setup-guide.md  name-map.md  systemd-journal-configuration-guide.md  troubleshooting.md  ubuntu-syslog-rotation-guide.md
env/: env.example
k8s/: MODSECURITY_TROUBLESHOOTING.md  argocd-configmap.yaml  argocd-ingress.yaml  cert-manager.yaml  configmap.yaml  deploy-ingress-nginx.yaml  ingress.yaml  kustomization.yaml  letsencrypt-issuer.yaml  mcp-server.yaml  modsecurity-custom-rules.yaml  modsecurity-exceptions.yaml  monitoring-ingress.yaml  monitoring-tunnel-ingress.yaml  monitoring.yaml  (+3 more)
mcp-tools/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
mcp-tools/examples/: test_client.py
mcp-tools/mcp_fetch_server/: __init__.py  error_handler.py  http_transport.py  main.py  server.py
mcp-tools/tests/: test_error_handler.py  test_server.py
(+11 files in other folders)
