[project]
name = "mcp-fetch-server"
version = "0.1.0"
description = "MCP fetch server with Streamable HTTP transport"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-fetch-server = "mcp_fetch_server.main:main"